# Finanzlotse

./: .env.example  .gitignore  README.md
backend/: Dockerfile  README.md  pom.xml
backend/src/main/kotlin/ch/finanzlotse/: FinanzlotseApplication.kt
backend/src/main/kotlin/ch/finanzlotse/config/: SecurityConfig.kt
backend/src/main/kotlin/ch/finanzlotse/health/: HealthController.kt
backend/src/main/resources/: application.yml
backend/src/test/kotlin/ch/finanzlotse/health/: HealthControllerTest.kt
docs/: git-workflow.md  project-plan.md
frontend/: Dockerfile  README.md  angular.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts
infra/docker-compose/: README.md  docker-compose.yml
infra/k8s/: backend.yaml  configmap.yaml  frontend.yaml  kustomization.yaml  mock-banking-api.yaml  namespace.yaml  postgres.yaml  prediction-service.yaml  secret.yaml
infra/mock-banking/mappings/: transactions.json
prediction-service/: Dockerfile  README.md  pyproject.toml
prediction-service/app/: main.py
prediction-service/tests/: test_predictions.py
