[project]
name = "finanzlotse-prediction-service"
version = "0.0.1"
description = "Small prediction service for category suggestions and monthly spend estimates."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.0",
    "pytest>=8.3.0"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
